--- a/assets/css/stilo.css
+++ b/assets/css/stilo.css
@@ -22,14 +22,44 @@ footer {background: #aaa;color:white;}
 
 .nav ul {
     list-style-type: none;
+    margin: 0;
     padding: 0;
+    width: 200px;
+    background-color: #f1f1f1;
+
 }
 .nav ul a {
     text-decoration: none;
 }
 
+li a {
+    display: block;
+    color: #000;
+    padding: 8px 16px;
+    text-decoration: none;
+}
+
+li {
+    text-align: center;
+    border-bottom: 1px solid #555;
+}
+
+li:last-child {
+    border-bottom: none;
+}
+
+li a.active {
+    background-color: #4CAF50;
+    color: white;
+}
+
+li a:hover:not(.active) {
+    background-color: #555;
+    color: white;
+}
+
 @media all and (min-width: 768px) {
-    .nav {text-align:left;-webkit-flex: 1 auto;flex:1 auto;-webkit-order:1;order:1;}
+    .nav {text-align:left;-webkit-flex: 1 auto;flex:1;-webkit-order:1;order:1;}
     .article {-webkit-flex:5 0px;flex:5 0px;-webkit-order:2;order:2;}
     footer {-webkit-order:3;order:3;}
 }
