--- a/adm/public/css/stilo.css
+++ b/adm/public/css/stilo.css
@@ -16,9 +16,9 @@
     text-align: left;
 }
 
-header {background: rgb(46, 68, 139);color:white;}
+header {background: seagreen;color:white;}
 footer {background: #aaa;color:white;}
-.nav {background:#eee;}
+
 
 .nav ul {
     list-style-type: none;
@@ -62,4 +62,24 @@ li a:hover:not(.active) {
     .nav {text-align:left;-webkit-flex: 1 auto;flex:0;-webkit-order:1;order:1;}
     .article {-webkit-flex:5 0px;flex:5 0px;-webkit-order:2;order:2;}
     footer {-webkit-order:3;order:3;}
+}
+
+#form-container {
+    width: 100vw;
+    height: 100vh;
+    background: #6C7A89;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center
+}
+
+#form-box {
+    width: 300px;
+    padding: 20px;
+    box-sizing: border-box;
+}
+
+#form-box input {
+    font-size: large;
 }
